[package]
name = "mouscache"
version = "0.4.4"
authors = ["richer <richer.arc@gmail.com>"]
description = "A crate to store object either in redis or in memory"

documentation = "https://docs.rs/mouscache"
homepage = "https://github.com/wayk/mouscache-rs"
repository = "https://github.com/wayk/mouscache-rs"
keywords = ["cache", "redis"]
license = "MIT"

[dependencies]
r2d2 = "0.8"
r2d2_redis = "0.7"
redis = "0.8"
dns-lookup = "0.9"

[features]
default = []
hashset = []