[package]
name = "mouscache"
version = "0.5.6"
authors = ["richer <richer.arc@gmail.com>"]
description = "A crate to store object either in redis or in memory"
edition = "2018"

documentation = "https://docs.rs/mouscache"
homepage = "https://github.com/wayk/mouscache-rs"
repository = "https://github.com/wayk/mouscache-rs"
keywords = ["cache", "redis"]
license = "MIT"

[dependencies]
r2d2 = "0.8"
redis = "0.10"
dns-lookup = "0.9"
parking_lot = "0.6"