[package]
name = "mouscache_derive"
version = "0.3.3"
authors = ["Richer Archambault <richer.arc@gmail.com>"]
description = "A utility crate implement trait to store object either in redis or in memory"

documentation = "https://docs.rs/mouscache_derive"
homepage = "https://github.com/wayk/mouscache-rs"
repository = "https://github.com/wayk/mouscache-rs"
keywords = ["cache", "redis"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "0.5"
proc-macro2 = "0.3"


[dependencies.syn]
version = "0.13"
features = ["derive"]